# graf-rs

./: Cargo.toml  shell.nix
src/: app.rs  dag.rs  devices.rs  drawing_utils.rs  main.rs  midi.rs  session.rs
src/devices/: clock.rs  gate.rs  latch.rs  mod.rs  note.rs  trigger.rs
src/widgets/: mod.rs  note_picker.rs
