[package]
name = "graf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.31.1"
egui-macroquad = {version = "0.17.3", default-features = false}
macroquad = "0.4.13"
midir = "0.10.1"
midly = "0.5.3"
